--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
-reference: "/home/heska/Documents/Ruslan/test2/BWA_reference/GRCh38.primary_assembly.genome.cleaned.fa"
-input_dir: "/home/heska/Documents/Ruslan/test2/test_task-1/"
-output_dir: "/home/heska/Documents/Ruslan/test2/results"
-threads: 8
-picard_jar: "/home/heska/anaconda3/share/picard-3.3.0-0/picard.jar"
-reference_regions: "/home/heska/Documents/Ruslan/test2/BWA_reference/exons.bed"
+reference: "/mnt/8Tb_new/rsmet/BWA_reference/GRCh38.primary_assembly.genome.cleaned.fa"
+input_dir: "/mnt/8Tb_new/rsmet/test_task-1/"
+output_dir: "/mnt/8Tb_new/rsmet/results"
+threads: 4
+picard_jar: "/home/rsmet/miniconda3/envs/ngs_task-1/share/picard-3.3.0-0/picard.jar"
+reference_regions: "/mnt/8Tb_new/rsmet/BWA_reference/GRCh38.primary_assembly.genome.cleaned.bed"
