--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,8 @@
-reference: "/mnt/8Tb_new/rsmet/BWA_reference/GRCh38.primary_assembly.genome.cleaned.fa"
-input_dir: "/mnt/8Tb_new/rsmet/test_task-1/"
-output_dir: "/mnt/8Tb_new/rsmet/results"
+reference: "GRCh38.primary_assembly.genome.cleaned.fa"
+input_dir: "raw_data"
+output_dir: "results"
 threads: 4
-picard_jar: "/home/rsmet/miniconda3/envs/ngs_task-1/share/picard-3.3.0-0/picard.jar"
-reference_regions: "/mnt/8Tb_new/rsmet/BWA_reference/GRCh38.primary_assembly.genome.cleaned.bed"
+picard_jar: "picard.jar"
+reference_regions: "GRCh38.primary_assembly.genome.cleaned.bed"
+annotation: "gencode.v44.basic.annotation.gff3.gz"
+windows: "GRCh38.primary_assembly.genome.cleaned.makewindow.bed"
