Обновление путей в конфигурационном файле config.yaml для новых данных и ресурсов.

--- a/config.yaml
+++ b/config.yaml
@@ -1,8 +1,8 @@
-reference: "GRCh38.primary_assembly.genome.cleaned.fa"
-input_dir: "raw_data"
-output_dir: "results"
+reference: "/mnt/8Tb_new/rsmet/BWA_reference/GRCh38.primary_assembly.genome.cleaned.fa"
+input_dir: "/mnt/8Tb_new/rsmet/test_task-1/"
+output_dir: "/mnt/8Tb_new/rsmet/test_task-1/results-new"
 threads: 4
-picard_jar: "picard.jar"
-reference_regions: "GRCh38.primary_assembly.genome.cleaned.bed"
-annotation: "gencode.v44.basic.annotation.gff3.gz"
-windows: "GRCh38.primary_assembly.genome.cleaned.makewindow.bed"
+picard_jar: "/home/rsmet/miniconda3/envs/ngs_task-1/share/picard-3.3.0-0/picard.jar"
+reference_regions: "/mnt/8Tb_new/rsmet/BWA_reference/GRCh38.primary_assembly.genome.cleaned.bed"
+annotation: "/mnt/8Tb_new/rsmet/BWA_reference/gencode.v44.basic.annotation.gff3.gz"
+windows: "/mnt/8Tb_new/rsmet/BWA_reference/GRCh38.primary_assembly.genome.cleaned.makewindow.bed"
